--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+     <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 <body class="container">
     <header>
+                                <!-- navigation menu -->
         <nav class="nav">
             <div class="nav-menu">
                 <img src="/assets/logo-navbar.png" alt="">
@@ -22,6 +25,20 @@
             <button class="btn">Get Early Access</button>
             </div>
         </nav>
+                                <!-- Hero section -->
+        <div class="hero-section">
+            <div class="early-access">
+                <img src="/assets/Group 5.png" alt="">
+                <h4 class="early-text">Early Access Now Open</h4>
+            </div>
+            <h1 class="hero-heading">Structured thinking,<br> <span class="hero-heading-greeen">Not just note-taking.</span></h1>
+            <p class="sub-heading">A private space to store notes, links, and learning summaries — designed to
+                <br>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+            <div class="hero-btn">
+                <button class="cta-btn btn">Start Building Your Vault  <span><img src="/assets/ArrowRight.png" alt=""></span></button>
+                <button class="cta-btn2 btn"><span><i class="fa-solid fa-caret-right"></i></span>See How It Works</button>
+            </div>
+        </div>
     </header>
     <main>
 
