--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Knowledge Vault</title>
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -28,20 +28,25 @@
                                 <!-- Hero section -->
         <div class="hero-section">
             <div class="early-access">
-                <img src="/assets/Group 5.png" alt="">
+                <img src="./assets/Group 5.png" alt="">
                 <h4 class="early-text">Early Access Now Open</h4>
             </div>
             <h1 class="hero-heading">Structured thinking,<br> <span class="hero-heading-greeen">Not just note-taking.</span></h1>
             <p class="sub-heading">A private space to store notes, links, and learning summaries — designed to
                 <br>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
             <div class="hero-btn">
-                <button class="cta-btn btn">Start Building Your Vault  <span><img src="/assets/ArrowRight.png" alt=""></span></button>
+                <button class="cta-btn btn">Start Building Your Vault  <span><img src="./assets/ArrowRight.png" alt=""></span></button>
                 <button class="cta-btn2 btn"><span><i class="fa-solid fa-caret-right"></i></span>See How It Works</button>
             </div>
         </div>
     </header>
     <main>
 
+                        <!-- Notes don't fail, Structure does. -->
+        <div class="notes">
+            <h1 class="notes-heading">Notes don't fail, Structure does.</h1>
+            <p class="notes-subtitle">You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+        </div>
     </main>
     <footer>
 
