--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                                 <!-- navigation menu -->
         <nav class="nav">
             <div class="nav-menu">
-                <img src="/assets/logo-navbar.png" alt="">
+                <img src="./assets/logo-navbar.png" alt="">
             <div class="featured-menu">
                 <li><a href="">Features</a></li>
                 <li><a href="">How It Works</a></li>
@@ -46,6 +46,37 @@
         <div class="notes">
             <h1 class="notes-heading">Notes don't fail, Structure does.</h1>
             <p class="notes-subtitle">You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+                         <!-- card section -->
+            <div class="allCards">
+                <div class="card">
+                    <img class="card-image" src="./assets/Vector.png" alt="">
+                    <div>
+                        <h4 class="card-text">Scattered notes</h4>
+                        <p class="notes-subtitle card-paragraph">Your ideas live in 10 different apps, none of them connected.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-image" src="./assets/Bookmarks.png" alt="">
+                    <div>
+                        <h4 class="card-text">Bookmark overload</h4>
+                        <p class="notes-subtitle card-paragraph">Hundreds of saved links you'll never revisit or remember.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-image" src="./assets/Brain.png" alt="">
+                    <div>
+                        <h4 class="card-text">No idea connections</h4>
+                        <p class="notes-subtitle card-paragraph">Insights stay isolated, never building into bigger understanding.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-image" src="./assets/Info.png" alt="">
+                    <div>
+                        <h4 class="card-text">Forgetting what you learned</h4>
+                        <p class="notes-subtitle card-paragraph">Knowledge fades because there's no system to retain it.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
