--- a/index.html
+++ b/index.html
@@ -78,6 +78,33 @@
                 </div>
             </div>
         </div>
+                     <!-- Your second brain, structured by design. -->
+        <div class="brain-structure">
+            <div class="brain-1">
+                <img class="knowledge-img" src="./assets/knowledge.png" alt="">
+            </div>
+            <div>
+                <span class="solution">This Solution</span>
+                <h1 class="brain-heading">Your second brain,<br> structured by design.</h1>
+                <p class="brain-text">Personal Knowledge Vault isn't another note-taking app. It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+                <div class="checkout">
+                    <img src="./assets/CheckCircle.png" alt="">
+                    <p class="checkout-text">Capture ideas with structure built-in from day one</p>
+                </div>
+                <div class="checkout">
+                    <img src="./assets/CheckCircle.png" alt="">
+                    <p class="checkout-text">Capture ideas with structure built-in from day one</p>
+                </div>
+                <div class="checkout">
+                    <img src="./assets/CheckCircle.png" alt="">
+                    <p class="checkout-text">Capture ideas with structure built-in from day one</p>
+                </div>
+                <div class="checkout">
+                    <img src="./assets/CheckCircle.png" alt="">
+                    <p class="checkout-text">Capture ideas with structure built-in from day one</p>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
