Ready to thinkmore clearly

--- a/index.html
+++ b/index.html
@@ -105,9 +105,25 @@
                 </div>
             </div>
         </div>
+                          <!-- Ready to think more clearly? -->
+        <div class="ready-div">
+            <div class="ready">
+                <div>
+                    <h2 class="ready-head">Ready To Think More Clearly?</h2>
+                <p class="sub-ready">Join thousands of learners who are building their personal knowledge <br>vaults.Start free, no credit card required.</p>
+                </div>
+                <div>
+                    <button class="cta-btn btn ready-btn">Get Early Access  <span><img src="./assets/ArrowRight.png" alt=""></span></button>
+                </div>
+                <div class="during">
+                    <p class="free">Free during early access</p>
+                    <li class="credit">No credit card needed</li>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
-
+              
     </footer>
 </body>
 </html>
