--- a/index.html
+++ b/index.html
@@ -123,7 +123,20 @@
         </div>
     </main>
     <footer>
-              
+        <div class="footer-section">
+            <img src="./assets/logo-footer.png" alt="">
+            <div>
+                <h4 class="social">Social Links</h4>
+                <div class="social-icon">
+                    <img src="./assets/fi_145807.png" alt="">
+                    <img src="./assets/fi_5968764.png" alt="">
+                    <img src="./assets/fi_5969020.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <p class="copyright-text">© 2026 Personal Knowledge Vault. All rights reserved.</p>
+        </div>      
     </footer>
 </body>
 </html>
