--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <br>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
             <div class="hero-btn">
                 <button class="cta-btn btn">Start Building Your Vault  <span><img src="./assets/ArrowRight.png" alt=""></span></button>
-                <button class="cta-btn2 btn"><span><i class="fa-solid fa-caret-right"></i></span>See How It Works</button>
+                <button class="cta-btn2 btn"><img src="./assets/Play.png" alt="">See How It Works</button>
             </div>
         </div>
     </header>
